# tusk

./: .gitattributes  .gitignore  CLAUDE.md  ENHANCED_RECALL_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  INTEGRATION_GUIDE.md  Makefile  PLAN_ENHANCEMENTS.md  README.md  TEST_COVERAGE_ANALYSIS.md  TODO.md  TOOL_ENHANCEMENT_COMPARISON.md  USAGE.md  azure-pipelines.yml  bunfig.toml  cli.ts  enhanced-recall-handler.ts  enhanced-relevance-scoring.ts  entry-classifier.ts  fts-manager.ts  fts-types.ts  fts.test.ts  git.ts  index.ts  journal-db.ts  journal-sqlite.ts  journal.ts  mcp-server.ts  migrate-plans.ts  migrate.ts  migrate_to_coa.py  migrate_to_global.py  mypy.ini  package.json  processing-utils.ts  pyproject.toml  relevance-scoring.ts  session-detector.ts  similarity-utils.ts  (+21 more)
.claude/: README.md  settings.local.json
.claude/commands/: checkpoint.md  plan.md  recall-check.md  recall.md  search.md  standup.md  tasks.md  todos.md
.claude/hooks/: HOOKS_ANALYSIS.md  conversation_start.ts  stop.py  (+11 more)
.miller/: .gitignore
.serena/: project.yml
docs/: DESIGN.md  tusk-recall-2025-09-30.md  tusk-recall-export-feature-2025-09-30.md
instructions/: agent-guidance.md  examples.md  system-prompt.md  tool-workflows.md
scripts/: README.md  check-code.py  fix-code.py  pre-commit.ps1  pre-commit.sh
tests/: __init__.py  cli.test.ts  enhanced-recall-integration.test.ts  enhanced-recall.test.ts  fts.test.ts  git.test.ts  integration.test.ts  journal-jsonl-old.test.ts.disabled  journal-sqlite.test.ts  journal.test.ts  mcp-server.test.ts  setup.ts  sqlite-io-bug.test.ts  standup.test.ts  test_asyncio_subprocess_safety.py  test_basic_functionality.py  test_checkpoint_hanging_regression.py  test_config.py  test_cross_project_functionality.py  test_datetime_consistency.py  test_directory_creation.py  test_git_integration.py  test_mcp_tools.py  test_migration.py  test_model_edge_cases.py  test_search_system.py  test_server.py  test_timezone_fix.py  test_unified_tools.py
(+119 files in other folders)
