[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "tusk-memory-mcp"
version = "0.1.0"
description = "Persistent memory MCP server for AI agents - like an elephant's memory"
authors = [{name = "COA Development Team"}]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.10.0",
    "whoosh>=2.7.4",
    "portalocker>=2.8.0",
    "python-json-logger>=2.0.7",
    "typing-extensions>=4.9.0",
    "docstring-parser>=0.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "types-python-dateutil>=2.8.19",
]

[project.scripts]
tusk-server = "tusk.server:sync_main"

[project.urls]
Homepage = "https://github.com/anortham/tusk"
Repository = "https://github.com/anortham/tusk.git"
Issues = "https://github.com/anortham/tusk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tusk"]

[tool.black]
line-length = 160
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 160

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]